fixed the submit button text getting cutoff on high score form

--- a/trivia/src/components/game/game.scss
+++ b/trivia/src/components/game/game.scss
@@ -82,6 +82,9 @@ h3 {
 
 .high-score {
     text-align: center;
+    button {
+        padding-bottom: 35px;
+    }
 }
 
 .question {
